ignore files implemented

--- a/Reference/.gitignore
+++ b/Reference/.gitignore
@@ -1,2 +1,6 @@
 ref_screen.csv
 what sites are missing GE screen.R
+GE_Screens.xlsx
+one table errors_12.19.23_version that is uncorrected and full of errors
+one.table_rule.all_OUT OF COMPLIANCE WITH STATIONS_query and edit to match.csv
+~$GIS=N_SLH=BPJ.xlsx
