MMI 4 metric model random forest objects saved

--- a/bugs analyses/MMI/_2024 model build/.gitignore
+++ b/bugs analyses/MMI/_2024 model build/.gitignore
@@ -3,3 +3,9 @@ workspace_4.25.24_mmi.code_thru step 4.rfmods.RData
 workspace_4.29.24_mmi.code_thru step 4.rfmods.RData
 workspace_MMI build_all steps_5.1.24.RData
 z_old schtuff
+final_MMI_5.metrics.csv
+rfmod_nt_habit_cling.Rdata
+rfmod_pi_Pleco.Rdata
+rfmod_pi_tv_intol.Rdata
+rfmod_pt_habitat_rheo.Rdata
+rfmod_pt_ti_warm_stenowarm.Rdata
