--- a/bugs analyses/RIVPACS_2022/_2024 model build/.gitignore
+++ b/bugs analyses/RIVPACS_2022/_2024 model build/.gitignore
@@ -8,3 +8,4 @@ RIVPACS.2024__NoNBR_6out_9grps_11preds.Rdata
 RIVPACS.2024__NoNBR_6out_9grps_9preds.Rdata
 z_OLD_Exploratory Work
 nhd.slope
+OE_model build_ODEQ.2022_noNBR_no outliers.R
