adding a few files that were not committed

--- a/bugs analyses/MMI/_2024 model build/.gitignore
+++ b/bugs analyses/MMI/_2024 model build/.gitignore
@@ -9,3 +9,5 @@ rfmod_pi_Pleco.Rdata
 rfmod_pi_tv_intol.Rdata
 rfmod_pt_habitat_rheo.Rdata
 rfmod_pt_ti_warm_stenowarm.Rdata
+MMI_code_ODEQ.2024_FINAL.R
+~WRL0277.tmp
