RIV24 rebuild stuff

--- a/bugs analyses/RIVPACS_2022/_2024 model build/z_OLD_Exploratory Work/run old models with new ref sites/.gitignore
+++ b/bugs analyses/RIVPACS_2022/_2024 model build/z_OLD_Exploratory Work/run old models with new ref sites/.gitignore
@@ -3,3 +3,6 @@ OE.WCCP_new ref 2022.old model.xlsx
 OE.WCCP_new ref 2022.old model.csv
 OE.MWCF_new ref 2022.old model.xlsx
 OE.MWCF_new ref 2022.old model.csv
+ODEQ22Matrix2005otu.csv
+2005preds_225ref_new sites.csv
+2005preds_225ref_new sites for running old models.xlsx
